--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.9",
     "sweetalert": "^2.1.2",
     "swiper": "^9.1.0",
     "web-vitals": "^2.1.4"
